<resources>
    <string name="app_name">University Market</string>
    <string name="app_version">v1.0.0</string>

    <string name="tab_browse_txt">Browse</string>
    <string name="tab_filter_txt">Filter</string>
    <string name="tab_create_txt">Create</string>
    <string name="tab_view_txt">Posts</string>
    <string name="tab_watch_txt">Watch</string>
    <string name="tab_bookkeep_txt">Bookkeep</string>
    <string name="tab_portfolio_txt">Portfolio</string>

    <string name="chat_unavailable_txt">You have not yet started a conversation</string>

    <string name="message_input_box_hint">Type a message</string>
    <string name="message_send_button_desc">Send</string>
    <string name="message_offer_button_desc">Send offer</string>
    <string name="message_post_unavailable"><i><b>Post unavailable</b></i></string>

    <string name="offer_posts_label_txt">Select a post</string>
    <string name="offer_close_button_txt">Close</string>

    <string name="dash_market_button_txt">Market</string>
    <string name="dash_post_button_txt">Post</string>
    <string name="dash_watch_button_txt">Watch</string>
    <string name="dash_chat_button_txt">Chat</string>
    <string name="dash_profile_button_txt">Profile</string>

    <string name="dash_toolbar_settings_txt">Settings</string>
    <string name="dash_toolbar_browse_txt">UTA Marketplace</string>
    <string name="dash_toolbar_filter_txt">Filter Options</string>
    <string name="dash_toolbar_create_txt">Create a Post</string>
    <string name="dash_toolbar_view_txt">My Posts</string>
    <string name="dash_toolbar_watch_txt">My Watchlist</string>
    <string name="dash_toolbar_analyze_txt">My Analytics</string>
    <string name="dash_toolbar_chat_txt">My Conversations</string>

    <string name="test_upload_button_txt">Upload Test</string>
    <string name="test_clear_button_txt">Clear Test</string>
    <string name="test_download_button_txt">Download Test</string>

    <string name="records_unavailable_txt">No records are available at this time</string>

    <string name="watch_unavailable_txt">You are not watching any items</string>

    <string name="post_submit_button_txt">Post Item</string>
    <string name="post_image_submit_hint">Image upload</string>
    <string name="post_title_field_hint">Title</string>
    <string name="post_genre_label_txt">Genre</string>
    <string name="post_description_field_hint">Description</string>
    <string name="post_price_field_hint">Price</string>
    <string name="post_image_required_txt">at least one image is required</string>
    <string name="post_image_addmore_button_txt">Add more images</string>

    <string name="mypost_posts_unavailable_txt">You haven\'t uploaded any posts yet</string>

    <string name="mypostprofile_posts_unavailable_txt">User has not posted anything</string>

    <string name="market_posts_unavailable_txt">No posts under these filters</string>

    <string name="viewpost_watchlist_add_button_txt">Add to watchlist</string>
    <string name="viewpost_create_conversation_button_txt">Contact seller</string>

    <string name="settings_records_button_txt">My Receipts</string>
    <string name="settings_signout_button_txt">Sign Out</string>

    <string name="profile_save_button_txt">Save</string>
    <string name="profile_description_hint">Enter your profile description here!</string>
    <string name="profile_description_label">Description</string>
    <string name="profile_rating_label">Rating</string>

    <string name="back_to_marketplace">Back to Market</string>
    <string name="refresh">Refresh</string>
    <string name="load_txt">Loading…</string>

    <string name="hello_blank_fragment">Hello world</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="mavlogo">MavLogo</string>
    <string name="back_to_main">Back To Main</string>
    <string name="invalid_email">That\'s an Invalid password or email address. University Marketplace is exclusively for students, So you will have to login with your student email address.</string>
    <string name="got_it">Got It</string>
    <string name="emailsentstudent">An email has been sent to your student address. Please verify your account.</string>
    <string name="emailsentmod">An email has been sent to your faculty/staff account. Please verify your email.</string>

</resources>