<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drip"
    tools:context=".Login"
    >

    <TextView
        android:id="@+id/invalidEmail"
        android:layout_width="357dp"
        android:layout_height="287dp"
        android:layout_marginBottom="388dp"
        android:background="#d6f2eb"
        android:gravity="center"
        android:text="@string/invalid_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/got_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:text="@string/got_it"
        android:textColor="#212121"
        app:backgroundTint="#db6380"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/email"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="44dp"
        android:background="#89B3F0"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="44dp"
        android:background="#89B3F0"
        android:hint="@string/enter_your_password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:text="Sign up"
        android:textColor="#4A148C"
        app:backgroundTint="#4DAFA7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="628dp"
        android:text="@string/back_to_main"
        android:textColor="#4A148C"
        app:backgroundTint="#4DAFA7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:src="@drawable/maverick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/mavlogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:layout_marginTop="90dp"
        android:background="#89B3F0"
        android:gravity="center"
        android:text="Already Have an Account?"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/signin"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signin"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="92dp"
        android:text="Sign In"
        app:backgroundTint="#db6380"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>