<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="500"
    tools:context=".fragments.viewPostFragment"
    >


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

        <HorizontalScrollView
            android:id="@+id/post_image_carousel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:id="@+id/post_images"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageSwitcher
                    android:id="@+id/post_image_switcher"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerInside" />

            </LinearLayout>
        </HorizontalScrollView>

            <TextView
                android:id="@+id/post_title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_image_carousel"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="$price - title of post"
                android:textSize="22sp" />

        <Button
            android:id="@+id/viewpost_author_button"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewpost_rating_indicator"
            android:layout_centerHorizontal="true"
            android:text="From Johnny Hamcheck"
            android:textColor="?colorOnTertiary" />

        <RatingBar
            android:id="@+id/viewpost_rating_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_title_field"
            android:layout_centerHorizontal="true"
            android:isIndicator="true"
            android:contentDescription="@string/profile_rating_label" />

        <LinearLayout
                android:id="@+id/post_description_and_contact_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/viewpost_author_button"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/addwl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/viewpost_watchlist_add_button_txt" />

                <Button
                    android:id="@+id/viewpost_create_conversation_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/viewpost_create_conversation_button_txt"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/post_description_field"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:ems="10"
                    android:text="description"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp" />

        </LinearLayout>

        </RelativeLayout>

</RelativeLayout>